--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
@@ -26,7 +27,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.257.0",
-    "next": "13.4.7",
+    "next": "^13.4.10",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
