--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "^14.0.4",
     "lucide-react": "^0.257.0",
-    "next": "^13.4.10",
+    "next": "^14.0.4",
     "postcss": "8.4.24",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "recharts": "^2.7.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
